Remove old stuff

--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -11,12 +11,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
   <link rel="stylesheet" href="{% static "portfolio/custom.css" %}">
-  
+
   <link href="https://fonts.googleapis.com/css2?family=Cardo:wght@700&family=Flamenco&family=Lato&family=Open+Sans&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 
   <link rel="icon" type="image/png" href="{% static "portfolio/Logo.png" %}">
 
-  <title>Kavosh Madadi</title>
+  <title>Joker Blog</title>
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     <div class="container">
       <a class="navbar-brand" href="{% url 'home' %}">
         <img src="{% static "portfolio/Logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Nick's Logo">
-        <span>Kavosh</span>
+        <span>JOKER</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
